--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="jquery.timeago.js"></script>
 <script src="radiator.js"></script>
 
 <style>
@@ -25,7 +26,7 @@ body {
 </style>
 
 <script>
-radiator.getBuildStatus([ "CHC.CMR.CentralMailService (auto debug)", "CHP-1.x-DEV-DEBUG", "CHP-Main-RELEASE", "PrintActivationList(debug)" ]);
+radiator.getBuildStatus([ "Youforce - DEV", "Youforce - MAIN" ]);
 </script>
 
 </head>
